--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,42 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+build/
+dist/
+*.egg-info/
+
+# User data (sensitive)
+.insightos/
+config.json
+*.log
+
+# Environment
+.env
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# macOS
+.DS_Store
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# ChromaDB
+chroma/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
