--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,20 @@
-# Core Dependencies
-anthropic>=0.18.0
-chromadb>=0.4.24
-sentence-transformers>=2.3.0
-
-# UI Framework
-PyQt6>=6.6.0
-
-# Security & Encryption
-cryptography>=41.0.0
-
-# Document Processing
-PyPDF2>=3.0.0
-python-docx>=1.1.0
-python-pptx>=0.6.23
-openpyxl>=3.1.0
-
-# Text Processing
-markdown>=3.5.0
-beautifulsoup4>=4.12.0
-lxml>=4.9.0
-
-# Utilities
-python-dotenv>=1.0.0
+annotated-types==0.7.0
+anthropic==0.76.0
+anyio==4.12.1
+asyncio==4.0.0
+bcrypt==5.0.0
+beautifulsoup4==4.14.3
+chromadb==1.4.1
+cryptography==46.0.3
+huggingface-hub==0.36.0
+lxml==6.0.2
+Markdown==3.10
+mcp==1.25.0
+numpy==2.4.1
+openpyxl==3.1.5
+PySide6==6.10.1
+python-docx==1.2.0
+python-dotenv==1.2.1
+python-pptx==1.0.2
+sentence-transformers==5.2.0
+transformers==4.57.6
